@@ -17,7 +17,9 @@
         </ul>
     </div>
 
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/MuestrasSolicitadas.js"></script>
+    
 </body>
 </html>
