@@ -22,6 +22,8 @@
 
 <input type="button" id="continuarPedido" value="Proceder a finalizar pedido" style="margin-top: 20px;">
 
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/globales.js"></script>
     <script src="./js/funciones.js"></script>
     <script src="./js/app.js"></script>
